Move to SB3 Upgrade dependencies Fix a bug in ExtendedSimpleJpaRepository